--- a/webpage/index.html
+++ b/webpage/index.html
@@ -58,8 +58,7 @@
         <div class="message">
             <a class="twitter-link" href="http://twitter.com/home/?status=I%20created%20a%20project%20with%20AWS%20CodeStar!%20%23AWS%20%23AWSCodeStar%20https%3A%2F%2Faws.amazon.com%2Fcodestar"><img src="img/tweet.svg" /></a>
             <div class="text">
-                <h1>Congratulations!</h1>
-                <h2>You just created an HTML5 web application</h2>
+                <h2>ChmurolandiaPL</h2>
             </div>
         </div>
     </div>
